Fix spacing

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -37,6 +37,8 @@ $font-size-text-small: 16px;
 $font-size-text-medium: 18px;
 $font-size-text-large: 20px;
 
+$p-margin-standart: 0.75em;
+
 /** Font Weight **/
 $font-weight-standart: 500;
 $font-weight-bold: 700;
